# CopyFiles

./: CMakeLists.txt  CopyFiles.rc  CopyFiles.vcxproj  CopyFiles.vcxproj.filters  CopyPage.cpp  CopyPage.h  CopyTab.cpp  CopyTab.h  Copythread.cpp  Copythread.h  FileDirList.cpp  FileDirList.h  ResourcesCopyPage.h  Resourcescopyfiles.cpp  Tools.cpp  Tools.h  autocopy.ui  autohide.cpp  autohide.h  copyfiles.cpp  copyfiles.h  copyfiles.qrc  copyfiles.ui  copypage.ui  fileslistwidget.cpp  fileslistwidget.h  main.cpp  resource.h
